--- a/app/jquery.treetable.theme.default.css
+++ b/app/jquery.treetable.theme.default.css
@@ -1,5 +1,5 @@
 table.treetable {
-    margin-top: 24px;
+    margin-top: 30px;
     margin-bottom: 10px;
     border: 1px solid #DDD;
     font-size: var(--btTreeFontSize);
@@ -8,6 +8,7 @@ table.treetable {
     width: 100%;
     color: var(--btTreeForeground);
     background: var(--btTreeBackground);
+    border-spacing: 0px 1px;
 }
 
 /* my add - equal width cols w tree on left not wrapping. not sure why max-width is needed?! */
@@ -32,21 +33,6 @@ table.treetable td.search {
     text-overflow: initial;
     white-space: normal;
 }
-
-/*
-table.treetable caption {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: .2em;
-}
-
-table.treetable thead tr th {
-  border: 1px solid #888;
-  font-weight: normal;
-  padding: .3em 1em .1em 1em;
-  text-align: left;
-}
-*/
 
 #content.editOverlaid {
     border-left-color: rgb(0,0,0,0);
@@ -82,6 +68,9 @@ tr.opened td.left {
 }
 td.left {
     vertical-align: middle;
+    border-right: solid;
+    border-right-width: 1px;
+    border-right-color: white;
 }
 
 table.treetable span.btText {
